--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "babel-plugin-react-html-attrs": "^3.0.5",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
